lib/dependencies/monitoring-stack/patches/prometheus-ingress-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: prometheus-prefix
spec:
  stripPrefix:
    prefixes:
      - /prometheus/
