lib/dependencies/monitoring-stack/patches/prometheus-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  annotations:
    # ingress.kubernetes.io/rewrite-target: /
    # ingress.kubernetes.io/app-root: /prometheus
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: kubernetes.docker.internal
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: monitoring-stack-server.prometheus.svc
                port: http


# spec:
#   rules:
#     - host: kubernetes.docker.internal
#       http:
#         paths:
#           - path: /argocd
#             pathType: ImplementationSpecific
#             backend:
#               service:
#                 name: argo-cd-server
#                 port:
#                   name: http
